--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -8,7 +8,30 @@ buildSystemDetails: null
 pipelines: {}
 datasets: {}
 templates: {}
-jobs: {}
+jobs:
+  jobs/weekly_job:
+    name: weekly_job
+    description: ''
+    fabricUID: 140
+    scheduler:
+      Composer: {}
+    cloudProvider: null
+    jobSize: null
+    scheduleCron: None
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Multi: {}
+      clusterId: null
+    enabled: false
+    createdAt: '2024-06-12 05:14:30'
+    author: maciej@prophecy.io
 gemContainer:
   languageVersion: ''
   gemLibsVersion: ''
