--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -32,6 +32,7 @@ jobs:
     enabled: false
     createdAt: '2024-06-12 06:40:20'
     author: maciej@prophecy.io
+    models: []
 gemContainer:
   languageVersion: ''
   gemLibsVersion: ''
