Updates analytics job and refines ad account report models - Modifies `weekly_job` analytics task - Enhances `br_go_ad_history`, `sv_go_account_report`, `gl_all_account_report`, and `sv_am_account_report` models

--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -204,7 +204,63 @@ sqlModels:
     createdAt: '2024-06-09 19:44:47'
   .prophecy/metadata/sqlmodels/br_go_ad_history:
     name: br_go_ad_history
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: source_relation
+        dataType:
+          type: String
+      - name: ad_group_id
+        dataType:
+          type: Float
+      - name: ad_id
+        dataType:
+          type: Float
+      - name: updated_at
+        dataType:
+          type: Date
+      - name: display_url
+        dataType:
+          type: String
+      - name: ad_type
+        dataType:
+          type: String
+      - name: ad_status
+        dataType:
+          type: String
+      - name: is_most_recent_record
+        dataType:
+          type: Boolean
+      - name: source_final_urls
+        dataType:
+          type: String
+      - name: final_url
+        dataType:
+          type: String
+      - name: base_url
+        dataType:
+          type: String
+      - name: url_host
+        dataType:
+          type: String
+      - name: url_path
+        dataType:
+          type: String
+      - name: utm_source
+        dataType:
+          type: String
+      - name: utm_medium
+        dataType:
+          type: String
+      - name: utm_campaign
+        dataType:
+          type: String
+      - name: utm_content
+        dataType:
+          type: String
+      - name: utm_term
+        dataType:
+          type: String
     description: Each record represents a version of an ad in Google Ads.
     author: maciej@prophecy.io
     files:
@@ -478,13 +534,13 @@ sqlModels:
           type: String
       - name: account_id
         dataType:
-          type: Integer
+          type: String
       - name: clicks
         dataType:
           type: Bigint
       - name: impressions
         dataType:
-          type: Bigint
+          type: Float
       - name: cost
         dataType:
           type: Float
@@ -603,7 +659,33 @@ sqlModels:
     createdAt: '2024-06-11 03:42:29'
   .prophecy/metadata/sqlmodels/sv_am_account_report:
     name: sv_am_account_report
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: account_id
+        dataType:
+          type: String
+      - name: source_relation
+        dataType:
+          type: String
+      - name: account_name
+        dataType:
+          type: String
+      - name: currency_code
+        dataType:
+          type: String
+      - name: date_day
+        dataType:
+          type: Integer
+      - name: total_clicks
+        dataType:
+          type: Bigint
+      - name: total_impressions
+        dataType:
+          type: Double
+      - name: total_cost
+        dataType:
+          type: Double
     description: null
     author: maciej@prophecy.io
     files:
@@ -618,7 +700,33 @@ sqlModels:
     createdAt: '2024-06-11 03:50:11'
   .prophecy/metadata/sqlmodels/sv_go_account_report:
     name: sv_go_account_report
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: customer_id
+        dataType:
+          type: Integer
+      - name: total_spend
+        dataType:
+          type: Bigint
+      - name: total_impressions
+        dataType:
+          type: Bigint
+      - name: total_clicks
+        dataType:
+          type: Bigint
+      - name: date
+        dataType:
+          type: Date
+      - name: device
+        dataType:
+          type: String
+      - name: interactions
+        dataType:
+          type: Integer
+      - name: formatted_spend
+        dataType:
+          type: String
     description: null
     author: maciej@prophecy.io
     files:
