--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -637,25 +637,19 @@ sqlModels:
       - name: account_id
         dataType:
           type: Integer
-      - name: TOTAL_CLICKS
-        dataType:
-          type: Bigint
-      - name: TOTAL_IMPRESSIONS
-        dataType:
-          type: Bigint
       - name: TOTAL_SPEND
         dataType:
           type: Float
-      - name: date_day
+      - name: is_most_recent_record
         dataType:
-          type: Date
-      - name: ad_network_type
-        dataType:
-          type: String
-      - name: source_relation
-        dataType:
-          type: String
+          type: Boolean
       - name: currency_code
+        dataType:
+          type: String
+      - name: updated_at
+        dataType:
+          type: Timestamp
+      - name: pretty_spend
         dataType:
           type: String
     description: null
@@ -1635,7 +1629,18 @@ sqlSources:
       description: null
       author: maciej@prophecy.io
       createdAt: '2024-06-10 19:42:20'
-sqlUnreferencedSources: {}
+sqlUnreferencedSources:
+  .prophecy/metadata/sqlunreferencedsources/test:
+    name: test
+    schema:
+      entityType: ''
+      providerType: databricks
+      fields: []
+    description: null
+    author: maciej@prophecy.io
+    files:
+    - prophecy-sources/unreferencedSources.yml
+    createdAt: '2024-09-04 19:32:40'
 sqlPipeline:
   name: sqlPipeline
   description: null
