Refactors Google Ads models - Adds URL component extraction to `br_go_ad_history`

--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -209,7 +209,61 @@ sqlModels:
     createdAt: '2024-06-09 19:44:47'
   .prophecy/metadata/sqlmodels/br_go_ad_history:
     name: br_go_ad_history
-    schema: null
+    schema:
+      entityType: ''
+      providerType: Databricks
+      fields:
+      - name: source_relation
+        dataType:
+          type: String
+      - name: ad_group_id
+        dataType:
+          type: Float
+      - name: ad_id
+        dataType:
+          type: String
+      - name: updated_at
+        dataType:
+          type: Date
+      - name: display_url
+        dataType:
+          type: String
+      - name: ad_type
+        dataType:
+          type: String
+      - name: ad_status
+        dataType:
+          type: String
+      - name: source_final_urls
+        dataType:
+          type: String
+      - name: final_url
+        dataType:
+          type: String
+      - name: base_url
+        dataType:
+          type: String
+      - name: url_host
+        dataType:
+          type: String
+      - name: url_path
+        dataType:
+          type: String
+      - name: utm_source
+        dataType:
+          type: String
+      - name: utm_medium
+        dataType:
+          type: String
+      - name: utm_campaign
+        dataType:
+          type: String
+      - name: utm_content
+        dataType:
+          type: String
+      - name: utm_term
+        dataType:
+          type: String
     description: Each record represents a version of an ad in Google Ads.
     author: maciej@prophecy.io
     files:
@@ -637,19 +691,16 @@ sqlModels:
       - name: account_id
         dataType:
           type: Integer
+      - name: TOTAL_CLICKS
+        dataType:
+          type: Bigint
+      - name: TOTAL_IMPRESSIONS
+        dataType:
+          type: Bigint
       - name: TOTAL_SPEND
         dataType:
           type: Float
-      - name: is_most_recent_record
-        dataType:
-          type: Boolean
       - name: currency_code
-        dataType:
-          type: String
-      - name: updated_at
-        dataType:
-          type: Timestamp
-      - name: pretty_spend
         dataType:
           type: String
     description: null
